Update web3 profile image source in index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <div class="hero-right">
           <!-- web3 profile image placeholder -->
-          <img class="circle-img web3-img" src="assets/web3-profile.jpg" alt="Web3 profile image of Japheth (replace with your web3 avatar)">
+          <img class="circle-img web3-img" src="docs/assets/IMG_8242.jpeg" alt="Web3 profile image of Japheth (replace with your web3 avatar)">
         </div>
       </div>
     </section>
