Update meta description and contact links in index.html
image added on about

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Japheth — Web3 On‑Chain Researcher & Community Growth Strategist</title>
-  <meta name="description" content="Uche Japheth — on‑chain researcher, growth strategist and community manager. I transform AI, DeFi and GameFi data into actionable insights and sustainable growth." />
+  <meta name="description" content="Japheth — on‑chain researcher, growth strategist and community manager. I transform AI, DeFi and GameFi data into actionable insights and sustainable growth." />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -73,16 +73,16 @@
 
       <div class="about-grid">
         <div class="about-bio">
-          <p>I am <strong>Uche Japheth</strong>, an on‑chain researcher focused on transforming data across <strong>AI, DeFi, and GameFi</strong> into clear, actionable insights. My work centers on understanding how decentralized systems function at a fundamental level — how value flows, how incentives shape behavior, and how narratives align (or fail) with real utility.</p>
+          <p>I am <strong>Uche Japheth</strong>, an on‑chain researcher focused on transforming data across <strong>AI, DeFi, and GameFi</strong> into clear, actionable insights. My work centers on understanding how decentralized systems function at a fundamental level how value flows, how incentives shape behavior, and how narratives align (or fail) with real utility.</p>
 
           <p>As a <strong>Growth Strategist</strong>, I scale marketing concepts through hands‑on community building, moderation, and ecosystem engagement. I prioritize sustainable growth driven by clarity, trust, and long‑term participation over surface‑level promotion.</p>
 
-          <p>Beyond Web3, I am a <strong>Petroleum Engineering student</strong> and a <strong>Procurement Practitioner at Racine Technologies Limited</strong>. This background strengthens my understanding of structured operations, compliance, accountability, and real‑world business processes — which I apply to partnerships, campaign execution, and community operations.</p>
+          <p>Beyond Web3, I am a <strong>Petroleum Engineering student</strong> and a <strong>Procurement Practitioner at Racine Technologies Limited</strong>. This background strengthens my understanding of structured operations, compliance, accountability, and real‑world business processes which I apply to partnerships, campaign execution, and community operations.</p>
         </div>
 
         <div class="about-photo">
           <!-- non-web3 headshot placeholder -->
-          <img class="circle-img" src="assets/me.jpg" alt="Japheth headshot">
+          <img class="circle-img" src="docs/F35EFCDC-2774-41AF-9877-8C1BFC818509.png" alt="Japheth headshot">
         </div>
       </div>
     </section>
@@ -177,13 +177,6 @@
         </li>
 
         <li class="contact-item">
-          <a class="contact-link" href="https://linktr.ee/your-link" target="_blank" rel="noopener noreferrer" aria-label="Linktree">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" aria-hidden="true"><circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="1.6"/></svg>
-            <span> Linktree</span>
-          </a>
-        </li>
-
-        <li class="contact-item">
           <a class="contact-link" href="https://www.linkedin.com/in/your-profile" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" aria-hidden="true"><rect x="3" y="3" width="18" height="18" rx="2" stroke="currentColor" stroke-width="1.6"/></svg>
             <span> LinkedIn</span>
@@ -191,7 +184,7 @@
         </li>
 
         <li class="contact-item">
-          <a class="contact-link" href="https://t.me/your-telegram" target="_blank" rel="noopener noreferrer" aria-label="Telegram">
+          <a class="contact-link" href="https://t.me/jap_eel" target="_blank" rel="noopener noreferrer" aria-label="Telegram">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M22 4L2 12l5 2 2 6 3-4 6 4 4-18z" fill="currentColor"/></svg>
             <span> Telegram</span>
           </a>
