Revise skill descriptions and experience details
Updated various skill descriptions to provide more detail and clarity about expertise in on-chain research, community management, growth strategy, and communication. Enhanced the experience section to emphasize engagement quality and project alignment.

--- a/index.html
+++ b/index.html
@@ -93,37 +93,41 @@
       <div class="skills-grid">
         <article class="skill-block variant-1" aria-labelledby="skill-1">
           <h3 id="skill-1">On‑Chain Research & Narrative Analysis</h3>
-          <p>I translate complex blockchain systems into clear, actionable insights: token flows, protocol mechanics, risks and long‑term potential beyond hype.</p>
+          <p>I specialize in on-chain research and narrative analysis, translating complex blockchain systems into clear, actionable insights. My work focuses on understanding how value flows through DeFi, GameFi, and on-chain ecosystems, identifying sustainable mechanics, risks, and long-term potential beyond surface-level hype.</p>
+          <p>By combining protocol analysis, token flow evaluation, and ecosystem context, I help communities, builders, and users understand why a system exists, how it works, and where its real value lies. My strength is not just in research, but in communicating findings in a way that is practical, accessible, and decision-oriented.</p>
           <ul>
             <li>Protocol & ecosystem analysis</li>
             <li>Tokenomics and incentive evaluation</li>
             <li>User behavior and sustainability risk analysis</li>
+            <li>Narrative positioning and market context</li>
           </ul>
         </article>
 
         <article class="skill-block variant-2" aria-labelledby="skill-2">
           <h3 id="skill-2">Community Management & Moderation</h3>
-          <p>Structure, clarity, and long‑term alignment — building systems that encourage healthy discussion, accountability, and meaningful participation.</p>
+          <p>I manage and moderate Web3 communities with a focus on structure, clarity, and long-term alignment between users and project goals. Rather than reactive moderation, I build systems that encourage healthy discussion, accountability, and meaningful participation.</p>
           <ul>
             <li>Community structure & guidelines</li>
-            <li>Active moderation & conflict resolution</li>
+            <li>Launch and governance support</li>
             <li>Team ↔ community communications</li>
           </ul>
         </article>
 
         <article class="skill-block variant-3" aria-labelledby="skill-3">
           <h3 id="skill-3">Community Building & Growth Strategy</h3>
-          <p>Growth strategies designed to align community engagement with on‑chain mechanics and product milestones for sustainable expansion.</p>
+          <p>I design and execute growth strategies focused on long-term participation rather than short-term metrics. My approach aligns community growth with on-chain mechanics, narratives, and product milestones to ensure sustainable expansion.</p>
           <ul>
             <li>Onboarding & retention frameworks</li>
             <li>Ambassador & contributor programs</li>
             <li>Cross‑community partnerships</li>
+            <li>Organic and trust-based scaling</li>
+            <li>Campaign designing</li>
           </ul>
         </article>
 
         <article class="skill-block variant-4" aria-labelledby="skill-4">
           <h3 id="skill-4">Research-Driven Content & Communication</h3>
-          <p>Transforming research and complex concepts into structured communication that educates, aligns, and builds trust.</p>
+          <p>I transform research and complex concepts into structured communication that educates, aligns, and builds trust. This ensures projects communicate clearly without overhyping or misrepresenting value.</p>
           <ul>
             <li>Insight-driven threads and long-form content</li>
             <li>Community announcements and updates</li>
@@ -138,7 +142,7 @@
 
       <div class="section-block">
         <h3>Experience</h3>
-        <p>I have hands‑on experience supporting, moderating, and scaling Web3 communities across DeFi, GameFi, AI, and emerging on‑chain ecosystems.</p>
+        <p>I have hands-on experience supporting, moderating, and scaling Web3 communities across DeFi, GameFi, AI, and emerging on-chain ecosystems. My work focuses on maintaining engagement quality, aligning community activity with project goals, and supporting campaigns that drive real participation rather than surface-level metrics.</p>
 
         <ul class="experience-list">
           <li><strong>Pecunity (formerly OctoDeFi)</strong> — Community Moderator (Current)</li>
@@ -147,10 +151,13 @@
           <li><strong>Remoi AI</strong> — Community Engagement & Moderation Support</li>
           <li><strong>Star System Labs</strong> — Campaign Manager & Community Engagement</li>
         </ul>
+        <p><em>I have also managed and supported multiple Web3 campaigns through Zealy and community-led initiatives between 2023–2026, contributing to onboarding, engagement loops, and campaign execution.</em></p>
+        <p>My experience spans gaming, DeFi, AI, and early-stage Web3 ecosystems, with a strong focus on engagement quality, community structure, and sustainable growth.</p>
       </div>
 
       <div class="section-block">
         <h3>Projects</h3>
+        <p>I currently collaborate with and contribute to a select number of projects I believe in, focusing on long-term alignment and authentic community engagement.</p>
         <div class="project-card">
           <strong>🔹 Pecunity</strong>
           <div>Role: Community Moderator</div>
@@ -171,35 +178,35 @@
       <ul class="contact-grid" role="list">
         <li class="contact-item">
           <a class="contact-link" href="https://twitter.com/JaphOnChain" target="_blank" rel="noopener noreferrer" aria-label="X / Twitter">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M18 6L6 18M6 6l12 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+            <svg width="22" height="22" viewBox="0 0 26 28" fill="none" aria-hidden="true"><path d="M18 6L6 18M6 6l12 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
             <span> @JaphOnChain</span>
           </a>
         </li>
 
         <li class="contact-item">
-          <a class="contact-link" href="https://www.linkedin.com/in/your-profile" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" aria-hidden="true"><rect x="3" y="3" width="18" height="18" rx="2" stroke="currentColor" stroke-width="1.6"/></svg>
+          <a class="contact-link" href="https://ng.linkedin.com/in/uche-japheth-05311232a" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+            <svg width="22" height="22" viewBox="0 0 26 26" fill="none" aria-hidden="true"><rect x="5" y="5" width="20" height="20" rx="4" stroke="currentColor" stroke-width="1.8"/></svg>
             <span> LinkedIn</span>
           </a>
         </li>
 
         <li class="contact-item">
           <a class="contact-link" href="https://t.me/jap_eel" target="_blank" rel="noopener noreferrer" aria-label="Telegram">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M22 4L2 12l5 2 2 6 3-4 6 4 4-18z" fill="currentColor"/></svg>
+            <svg width="20" height="22" viewBox="0 0 26 26" fill="none" aria-hidden="true"><path d="M22 4L2 12l5 2 2 6 3-4 6 4 4-18z" fill="currentColor"/></svg>
             <span> Telegram</span>
           </a>
         </li>
 
         <li class="contact-item">
           <a class="contact-link" href="mailto:camzyxworld@gmail.com" aria-label="Email">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M3 8l9 6 9-6" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><rect x="3" y="5" width="18" height="14" rx="2" stroke="currentColor" stroke-width="1.6"/></svg>
+            <svg width="20" height="22" viewBox="0 0 26 26" fill="none" aria-hidden="true"><path d="M3 8l9 6 9-6" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><rect x="3" y="5" width="18" height="14" rx="2" stroke="currentColor" stroke-width="1.6"/></svg>
             <span> Email</span>
           </a>
         </li>
 
         <li class="contact-item">
           <a class="contact-link" href="tel:+2349153661595" aria-label="Phone or WhatsApp">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M22 16.92V21a1 1 0 0 1-1.11 1A19 19 0 0 1 3 5.11 1 1 0 0 1 4 4h4.09a1 1 0 0 1 1 .75c.12.6.36 1.84.98 3.23a1 1 0 0 1-.24 1l-1.27 1.27a16 16 0 0 0 6.4 6.4l1.27-1.27a1 1 0 0 1 1-.24c1.39.62 2.63.86 3.23.98a1 1 0 0 1 .75 1V21z" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+            <svg width="22" height="24" viewBox="0 0 26 26" fill="none" aria-hidden="true"><path d="M22 16.92V21a1 1 0 0 1-1.11 1A19 19 0 0 1 3 5.11 1 1 0 0 1 4 4h4.09a1 1 0 0 1 1 .75c.12.6.36 1.84.98 3.23a1 1 0 0 1-.24 1l-1.27 1.27a16 16 0 0 0 6.4 6.4l1.27-1.27a1 1 0 0 1 1-.24c1.39.62 2.63.86 3.23.98a1 1 0 0 1 .75 1V21z" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/></svg>
             <span> +234 915 366 1595</span>
           </a>
         </li>
